[project]
name = "universal-context-architech"
version = "0.1.0"
description = "Surgical context extractor for LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.30.0",
    "streamlit-tree-select>=0.0.5",
    "pathspec>=0.12.1",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
]

[tool.uv]
managed = true
package = false